# clangCompiler

./: README.md
clangCompiler/: AppDelegate.swift  CMakeLists.txt  Testers.swift  ViewController.swift  main.swift
clangCompiler.xcodeproj/: project.pbxproj
clangCompiler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
clangCompiler/Main/: Block.swift  CompilerError.swift  Extensions.swift  Lexer.swift  Node.swift  Operator.swift  Parser.swift  ProtocolsAndEnums.swift  Token.swift
clangCompiler/Main/Nodes/: BinaryOperationNode.swift  CustomIntNode.swift  FunctionDefinitionNode.swift  InfixOperation.swift  NumberNode.swift  OperationNode.swift  ReturnNode.swift  TernaryNode.swift  UnaryNegativeNode.swift  VariableNode.swift
clangCompiler/Main/TreePrinter/: TreePrinter.swift  TreeRepresentable.swift
clangCompiler/NoMatter/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
clangCompiler/Source/: Block.swift  CompilerError.swift  Extensions.swift  Lexer.swift  Parser.swift  ProtocolsAndEnums.swift  Token.swift
clangCompiler/Source/Nodes/: BinaryOperationNode.swift  DoWhileNode.swift  FunctionDefinitionNode.swift  FunctionNode.swift  NumberNode.swift  ReturnNode.swift  TernaryNode.swift  VariableNode.swift
lab1SP/: SceneDelegate.swift  ViewController.swift
lab1SP.xcodeproj/: project.pbxproj
lab1SP/Main/: Block.swift  CompilerError.swift  Extensions.swift  Lexer.swift  Node.swift  Nodes.swift  Operator.swift  Parser.swift  Token.swift
lab1SP/Main/Nodes/: CustomIntNode.swift  InfixOperation.swift  (+4 more)
lab1SP/NoMatter/: AppDelegate.swift
(+7 files in other folders)
